--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       
 
   mongodb:
-    image: "mongo:latest"
+    image: "mongo:4.4.6"
     ports:
       - "27020:27017"
     volumes:
